--- a/style.css
+++ b/style.css
@@ -1,14 +1,32 @@
 /*CSS RESET*/
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
 
-#loggedin{
-	float:right;
+body{
+	font-family:"Helvetica", sans-serif;
+}
+
+a{text-decoration:none;}
+a:hover{text-decoration:underline;}
+
+#header{
+	background:#E0E0E0;
+	padding:2px 0;
+	font-size:0.9em;
+	color:#666;
+}
+
+#header a{
+	color:#53777A;
+}
+
+#header-user{
+	text-align:right;
 	min-width:100px;
-	margin:2px 2px 0 0;
+	margin:2px 5px 2px 0;
 }
 
 #user-photo{
-	float:left;
+	display:inline-block;
 	margin-right:5px;
 }
 
@@ -17,28 +35,51 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 #user-name{
-	float:left;
+	display:inline-block;
 }
 
 #logout-prompt{
-	float:right;
+	display:inline-block;
 	margin-left:5px;
 }
 
 h1{
-	font-size:5em;
+	font-size:8em;
+	font-family: 'Amatic SC', sans-serif;
+	font-weight:bold;
+	margin-top:100px;
 }
 
 h1#masthead{
 	text-align:center;
 	clear:both;
+	color:#53777A;
+}
+
+.awesome{
+	color:#C02942;
 }
 
 #goal-input{
-	margin:10px auto;
+	margin:30px auto 0;
 	width:750px;
+}
+
+input{
+	border:0;
+	font-size:2em;
+	font-family: 'Amatic SC', sans-serif;
+	font-weight:bold;	
 }
 
 input#goal{
 	width:600px;
+	padding:2px 5px;
+	border:1px solid #bbb;
+}
+
+input#submit-goal{
+	padding: 3px 15px;
+	background: #D95B43;
+	color:#ECD078;
 }
