--- a/style.css
+++ b/style.css
@@ -118,15 +118,24 @@ h2{
 	color:#542437;
 }
 
-#todays-goal-list li{
+#todays-goal-list{
+	width: 1000px;
+	margin: 0 auto;
+	font-family: 'Amatic SC', sans-serif;
+	text-align: center;
+}
+
+#todays-goals-all #todays-goal-list li{
 	font-size: 2.8em;
 	margin-bottom: 10px;
 	color: #888;
+	text-align:left;
 }
 
-#todays-goal li{
+#todays-goal-list li{
 	margin-bottom:20px;
-	font-size:1em;
+	font-size:5em;
+	color:#333;
 }
 
 #awesome-prompt{
@@ -236,4 +245,21 @@ h3{
 
 strong{
     font-weight:bold;
+}
+
+#login-prompt{
+	background:#F2F2F2;
+	padding:8px 10px;
+	width:800px;
+	margin:50px auto 25px;
+	font-family: 'Amatic SC', sans-serif;
+	font-size:3em;
+	border-radius:4px;
+	line-height:1.2em;	
+}
+
+#login-prompt .awesome-share{font-size:0.9em; margin-left:40px;}
+
+#no-active-goal{
+	display:none;
 }
