--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ a:hover{text-decoration:underline;}
 	padding:2px 0;
 	font-size:0.9em;
 	color:#666;
+	height:20px;
 }
 
 #header a{
@@ -20,9 +21,13 @@ a:hover{text-decoration:underline;}
 }
 
 #header-user{
-	text-align:right;
-	min-width:100px;
-	margin:2px 5px 2px 0;
+	text-align: right;
+	min-width: 100px;
+	margin: 2px 5px 2px 0;
+	text-transform: uppercase;
+	font-size: 0.8em;
+	color: #888;
+	line-height: 1.4em;
 }
 
 #user-photo{
@@ -130,6 +135,7 @@ h2{
 	margin-bottom: 10px;
 	color: #888;
 	text-align:left;
+	margin-top:0;
 }
 
 #todays-goal-list li{
@@ -199,11 +205,12 @@ h2{
 .fb_button_xlarge .fb_button_text{font-size:0.8em;}
 
 #whats-this{
-    color: #888;
-    float: left;
-    margin: 0 0 0 5px;
-    font-size: 0.9em;
-    cursor:pointer;
+	color: #888;
+	float: left;
+	margin: 0 0 0 15px;
+	font-size: 0.8em;
+	cursor: pointer;
+	line-height: 1.9em;
 }
 
 h3{
@@ -262,4 +269,30 @@ strong{
 
 #no-active-goal{
 	display:none;
+}
+
+html { height: 100% }
+body { height: 100%; margin: 0; padding: 0 }
+#map_canvas { height: 100% }
+
+#title{
+	float: left;
+	margin-left: 5px;
+	font-family: 'Amatic SC', sans-serif;
+	font-size: 1.7em;
+	font-weight: bold;
+	line-height: 0.7em;
+}
+
+#footer{
+	width: 1000px;
+	margin: 50px auto 0;
+	padding-bottom: 10px;
+	text-transform: uppercase;
+	font-size: 0.75em;
+	color:#bbb;
+}
+
+#footer a{
+	color:#888;
 }
