--- a/style.css
+++ b/style.css
@@ -350,3 +350,13 @@ body { height: 100%; margin: 0; padding: 0 }
 	line-height: 1.3em;
 	color:#888;
 }
+
+.result{
+	text-align: center;
+	color: #888;
+	font-family: Helvetica, sans-serif;
+	text-transform: uppercase;
+	font-size: 0.8em;
+	padding-top: 12px;
+	margin-bottom: -12px;
+}
